# plugin-spaceone-dclo-inven-collector-v2

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: dispatch_dev_relase.yaml  dispatch_prod_relase.yaml
pkg/: pip_requirements.txt
src/: main.py
src/connector/: dclo_connector.py  member_connector.py
src/manager/: collector_manager.py  constant.py  dclo_manager.py
src/metadata/dclo/: backup.yaml  dclo.yaml  to_yaml.py
src/model/: plugin_info_model.py
src/model/dclo/: collector.py
yaml/: aws.yaml  azr.yaml  gcp.yaml  spacectl_config.yaml
